<resources>
    <string name="app_name">رزنامتي</string>
    <string name="ok">Ok</string>
    <string name="login">LOGIN</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password</string>
    <string name="new_user">NEW USER?</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="register">REGISTER</string>
    <string name="please_select_account_type_and_fill_data">Please select account type and fill data</string>
    <string name="events_creater">Events Creater</string>
    <string name="coach">Coach</string>
    <string name="verification">Verification</string>
    <string name="verification_pin">4 - Digit PIN has been sent to your Registered Email. Enter it below to continue</string>
    <string name="resend_otp_timer">Resend in 00:59</string>
    <string name="submit">SUBMIT</string>
    <string name="edit_number">EDIT NUMBER</string>
    <string name="edit_event">EDIT EVENT</string>
    <string name="edit_post">EDIT POST</string>
    <string name="calender">CALENDER</string>
    <string name="social_media">SOCIAL MEDIA</string>
    <string name="notification">NOTIFICATION</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="coach_capital">COACH</string>
    <string name="instagram">Instagram</string>
    <string name="whastapp">Whatsapp</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="snapchat">Snapchat</string>
    <string name="youtube">Youtube</string>
    <string name="tiktok">Tiktok</string>
    <string name="telegram">Telegram</string>
    <string name="menu">MENU</string>
    <string name="language">Language</string>
    <string name="about_app">About app</string>
    <string name="registes">Register</string>
    <string name="logins">Login</string>
    <string name="Forgot_Password">Forgot Password</string>
    <string name="upload_image_video">Upload Image/Video</string>
    <string name="contact_us">Contact us</string>
    <string name="my_account">My Account</string>
    <string name="logout">Logout</string>
    <string name="about_appp">ABOUT APP</string>
    <string name="united_arab_emirates">United Arab Emirates</string>
    <string name="kuwait">Kuwait</string>
    <string name="bahrain">Bahrain</string>
     <string name="country">Country</string>
      <string name="change_pass"> Change Password</string>
    <string name="add_new_event">Add New Event</string>
    <string name="view_post">View Post</string>
    <string name="view_event">View Event</string>
    <string name="edit_pro">Edit Profile</string>
    <string name="my_aaccount">MY ACCOUNT</string>
    <string name="email">Email Address(Optional)</string>
    <string name="emails">Email Address</string>
    <string name="update_profile">Update Profile</string>
    <string name="search">SEARCH</string>
    <string name="your_post_does_not_exist">"your post does not exist"</string>
    <string name="something_wrong">something wrong</string>
    <string name="password_successfully_changed">password successfully changed</string>
    <string name="payment_details_does_not_exist">payment details does not exist</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="coachs_does_not_exist">coachs does not exist</string>
    <string name="country_users_does_not_exist">"Country user does not exist "</string>
    <string name="updated_profile_succesfully">"  Profile picture updated Successfully"</string>
    <string name="eventdetails_does_not_exist">event details does not exist here </string>
    <string name="sign_in_or_sign_up">Sign In Or Sign Up</string>
    <string name="some_netork_happened">"Some network happened .."</string>
    <string name="home">Home</string>
    <string name="calenderr">الرزنامة</string>
    <string name="no_posts">no posts</string>
    <string name="please_wait">Please Wait</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="are_you_sure_you_want_to_exit_the_app">Are you sure you want to exit the app?</string>
    <string name="gues">Continue as a guest</string>
    <string name="terms">Terms and condition</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="name">Name</string>
    <string name="lastName">Last Name</string>
    <string name="Mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">GENDER</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date of Birth</string>
    <string name="kindly_enter_first_name">Kindly Enter Name</string>
    <string name="kindly_enter_last_name">Kindly Enter Last Name</string>
    <string name="kindly_enter_mobile">Kindly Enter Mobile</string>
    <string name="kindly_enter_dob">Kindly enter Date of Birth</string>
    <string name="kindly_enter_confirm">Kindly Enter Confirm Password</string>
    <string name="kindly_select_terms">Kindly Select Terms and Condition</string>
    <string name="kindly_enter_password">Kindly Enter Password</string>
    <string name="terms_and_condition">Accept Terms and Condition and the details must be as per the Civil Id</string>
    <string name="info_txt">The details must be as per the Civil Id</string>
    <string name="have_you">Have an account?</string>
    <string name="term_and_condition">TERM AND CONDITION</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="privacy">Privacy Policy</string>
    <string name="title">Title</string>
    <string name="march_3_2022"> 3 March 2022</string>
    <string name="event">EVENT</string>
    <string name="events">EVENT</string>
    <string name="my_event">MY EVENT</string>
    <string name="my_post">MY POST</string>
    <string name="coachh">COACH ACCOUNT</string>
    <string name="change_password">Change Password</string>
    <string name="today_6_pm">Today 6:00 pm</string>
    <string name="notificationn">NOTIFICATION</string>
    <string name="thank_you">Thank you</string>
    <string name="coach_account">COACH ACCOUNT</string>
    <string name="coach.">COACH</string>
    <string name="add_new_post">Add New Post</string>
    <string name="cancel">Cancel</string>
    <string name="add_event">ADD EVENT</string>
    <string name="add_post">ADD POST</string>
    <string name="pay_now">PAY NOW</string>
    <string name="summary">Summary</string>
    <string name="post_price_qatar">Post Price Qatar</string>
    <string name="post_price_kuwait">Post Price Kuwait</string>
    <string name="total">Total</string>
    <string name="KWD4">4.000 KWD</string>
    <string name="free">Free</string>
    <string name="KWD8">8.000 KWD</string>
    <string name="knet">KNET</string>
    <string name="my_fatoorah">My fatoorah</string>
    <string name="visa_mastercard">Visa /Mastercard</string>
    <string name="payment_method">Payment Method</string>
    <string name="date">Date</string>
    <string name="ddmmyy">Date  (dd/mm/yyyy)</string>
    <string name="website">Website</string>
    <string name="story_photo_video">Story Photo/Video</string>
    <string name="even_photo_video">Event  Photo/Video</string>
    <string name="add_more_event">ADD MORE EVENT</string>
    <string name="i_accept_term_and_condition">I accept Terms and Condition</string>
    <string name="post_for_free_now">Post for Free now</string>
    <string name="your_post_will_be_uploaded_within_24_hours">Your Post will be uploaded within 24 hours
</string>
    <string name="continuee">CONTINUE</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="otp_toast">kindly enter valid otp</string>
    <string name="login_messesge">entered mobile,password or country code incorrect</string>
    <string name="story">Story</string>
    <string name="no_package">No package available</string>
    <string name="enter_name">kindly enter your name</string>
    <string name="enter_email">kindly enter your email</string>
    <string name="enter_password">kindly enter your password</string>
    <string name="enter_confirmpassword">kindly enter your confirmpassword</string>
    <string name="enter_mobile_code">kindly select your mobile countrycode</string>
    <string name="enter_mobile">kindly enter your mobile number</string>
    <string name="enter_whatsapp">kindly enter your whatsapp number</string>
    <string name="enter_whatsap_code">kindly select your whatsapp countrycode</string>
    <string name="enter_main_country">kindly select your main countrycode</string>
    <string name="enter_insta">kindly enter your instagram account</string>
    <string name="enter_snapchat">kindly enter your snapchat account</string>
    <string name="enter_website">kindly enter your website</string>
    <string name="video_or_image">kindly select video/image to upload on event date </string>
    <string name="select_date">kindly select your event date</string>
    <string name="enter_old_password">kindly enter old password</string>
    <string name="enter_new_password">kindly enter new password</string>
    <string name="enter_confirm_password">kindly enter confirm password</string>
    <string name="select_country_for_see_post">select country to see uploaded posts on country</string>
    <string name="i_accept">I accept</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thr">Thr</string>
    <string name="the_post_under_review">The post is under review and will be live after Approval</string>
    <string name="image_deleted">"image item deleted succesfully"</string>
    <string name="image_does_not_exist">"image data does not exist"</string>
    <string name="image_does_not_deleted">"image data does not deleted"</string>
    <string name="you_liked_it">You Liked it</string>
    <string name="you_unliked_liked_it">You unliked it</string>
     <string name="month">Month</string>
     <string name="year">Year</string>
    <string name="changer">عربى</string>
    <string name="want_restart">Are you sure want to restart this app</string>
    <string name="country_codes">Country Codes</string>
    <string name="set_image">Set image</string>
    <string name="take_image">Take a image</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_a_video">Take a video</string>
    <string name="set_image_or_video">Set image / Video</string>
    <string name="kindly_choose_any_profile_pic">kindly choose any profile pic</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_want_to_delete_account">Are you sure you want to Delete Account </string>
    <string name="your_account_will_be_deleted">Your Account will be Deleted </string>
    <string name="take_a_picture">Take a picture</string>
    <string name="record_a_video">Record a Video</string>
    <string name="image_picker_option_is_missing">Image picker option is missing</string>
    <string name="sorry_your_camera_does_not_support">Sorry! Your device doesn\'t support camera</string>
    <string name="kindly_capture_some_media">Kindly Capture some media</string>
    <string name="user_cancelled_image_capture">User cancelled image capture</string>
    <string name="sorry_failed_to_capture">Sorry! Failed to capture image</string>
</resources>