<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="300dp"
    android:minHeight="300dp"
    android:background="@color/colorAppBG"
    android:clickable="true"
    android:gravity="center_horizontal"
     android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradient_bg"
        android:minHeight="43dp">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:minWidth="70dp"
            android:minHeight="33dp"
            android:padding="7dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textAppearance="@style/font_medium"
            android:textColor="@color/white"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:minWidth="70dp"
            android:minHeight="33dp"
            android:padding="7dp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textAppearance="@style/font_medium"
            android:textColor="@color/white"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />
    </RelativeLayout>

    <EditText
        android:id="@+id/searchET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_top"
        android:layout_marginStart="12dp"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/search"
        android:visibility="visible"></EditText>
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/searchET"
        android:clipToPadding="false"
        android:divider="@color/grey"
        android:layout_marginBottom="30dp"
        android:dividerHeight="0.5dp"
        android:drawSelectorOnTop="true"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/circle_white"
        android:elevation="2dp"
        android:padding="2dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_error_message"
        style="@style/font_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alpha="0.8"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:padding="15dp"
        android:text="Message"
        android:textColor="@color/colorPrimary"
        android:textDirection="locale"
        android:textSize="@dimen/drawer_text_size"
        android:textStyle="bold"
        android:visibility="gone" />
</RelativeLayout>